Using threads to speed up simulations

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
                 "${workspaceFolder}/Task1/src/monty_hall.cpp", // Path to my_class.cpp
                 "-fdiagnostics-color=always",
                 "-I", "${workspaceFolder}/Task1/include",  // Path to include/ for headers
-                "-o", "${workspaceFolder}/Task1/bin/my_program"  // Output the executable in bin/
+                "-o", "${workspaceFolder}/Task1/bin/my_program",  // Output the executable in bin/
+                "-pthread"  // Link the pthread library for multi-threading
                 //"${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
