task and launch for task 1 and task 2 modified

--- a/Task2/part_a/.vscode/launch.json
+++ b/Task2/part_a/.vscode/launch.json
@@ -9,8 +9,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Task1/bin/my_program",
-            "args": [],
+            "program": "${workspaceFolder}/bin/string_splitter",
+            "args": ["hola"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
