--- a/Task2/part_a/.vscode/launch.json
+++ b/Task2/part_a/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/bin/string_splitter",
-            "args": ["This is a test"],
+            "args": ["   "],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
