--- a/Task1/.vscode/settings.json
+++ b/Task1/.vscode/settings.json
@@ -55,6 +55,7 @@
         "mutex": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "list": "cpp"
     }
 }
