--- a/Task1/.vscode/launch.json
+++ b/Task1/.vscode/launch.json
@@ -9,8 +9,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/my_program",
-            "args": [],
+            "program": "${workspaceFolder}/bin/monty_hall",
+            "args": ["both","1000"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
