Testing correction of the bug

--- a/Task2/part_a/.vscode/launch.json
+++ b/Task2/part_a/.vscode/launch.json
@@ -9,8 +9,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/string_splitter",
-            "args": ["hola"],
+            "program": "${workspaceFolder}/string_splitter",
+            "args": ["This is a test"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
