Testing no null terminator

--- a/Task2/part_b/.vscode/launch.json
+++ b/Task2/part_b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/my_strlen",
+            "program": "${workspaceFolder}/my_strlen",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
