--- a/Task2/part_b/.vscode/tasks.json
+++ b/Task2/part_b/.vscode/tasks.json
@@ -8,7 +8,7 @@
                 "-g",  // Debugging symbols
                 "${workspaceFolder}/my_strlen.c",  // Path to main.c
                 "-fdiagnostics-color=always",
-                "-o", "${workspaceFolder}/bin/my_strlen"  // Output the executable in bin/
+                "-o", "${workspaceFolder}/my_strlen"  // Output the executable in bin/
             ],
             "options": {
                 "cwd": "${fileDirname}"
